updated footer to h tag. Need to fix on mobile index sites

--- a/206-music-site2/css/main.css
+++ b/206-music-site2/css/main.css
@@ -145,8 +145,8 @@ h2, label {
 }
 
 h3 {
-  font-size: 1em;
-  text-transform: uppercase;
+  font-size: 1.3em;
+  line-height: 1;
 }
 
 .logo {
@@ -266,6 +266,11 @@ aside {
   width: 100%;
 }
 
+.feed-type {
+  font-size: 1em;
+  text-transform: uppercase;
+}
+
 .feed-img {
   width: 40%;
   float: left;
@@ -289,15 +294,24 @@ footer {
   margin: 0 auto;
 }
 
+footer .logo {
+  font-size: 1.5em;
+  padding:0;
+}
 
-/*** Detail Page Styles ***/
+footer .logo-img {
+  
+  
+}
+
+/*** Detail Page Styles for mobile ***/
 
 .author, .pub-date {
   display: inline-block;
 }
 
 
-/*** Reviews Index Styles ***/
+/*** Reviews Index Styles for mobile ***/
 .reviews-aside .newsletter {
   display: none;
 }
